...
        error: (Object err, StackTrace _) =>
            Center(child: Text(err.toString())),
      ),
      floatingActionButton:
          listAsync.value != null && listAsync.value!.isNotEmpty
          ? FloatingActionButton.extended(
              key: const Key('journal_list_create_button'),
              onPressed: () => _showCreateDialog(context, ref, l10n),
              icon: const Icon(Icons.add),
              label: Text(l10n.createJournal),
            )
          : null,
    );
...
